--- a/css/root.css
+++ b/css/root.css
@@ -3,3 +3,12 @@
     margin:0;
     box-sizing: border-box;
 }
+:root{
+     --primary-color:#FCB08C;
+    --secondary-color:rgb(213, 234, 236);
+    --bg-primary:rgb(250, 241, 241);
+    --bg-secondary-color:#f7f7f7;
+    --text-color:#000;
+    --secondary-text-color:#495057;
+  
+}
