--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
 @import url("./root.css");
+@import url("./typography.css");
+
+
 @import url("./component/avatar.css");
 @import url("./component/alert.css");
 @import url("./component/badge.css");
