--- a/css/root.css
+++ b/css/root.css
@@ -2,6 +2,10 @@
     padding:0;
     margin:0;
     box-sizing: border-box;
+    
+}
+@media only screen and(max-width:500px){
+    
 }
 :root{
      --primary-color:#FCB08C;
