--- a/css/component/badge.css
+++ b/css/component/badge.css
@@ -8,7 +8,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color:var(--bg-color);
+    background-color:var( --secondary-color);
+    color:var(--bg-color)
 }
 .md-circle{
     width:1.8rem;
@@ -23,8 +24,8 @@
     left:5.3rem;
 }
 .xs-circle{
-    top:3.2rem;
-    left:3rem;
+    top:2.3rem;
+    left:4rem;
     width:.75rem;
     height:.75rem;
 }
