--- a/css/component/badge.css
+++ b/css/component/badge.css
@@ -4,12 +4,12 @@
 .status-circle{
     position: absolute;
     border-radius: 50%;
-    border:2px solid var(--bg-color);
+    border:2px solid var(--text-light);
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:var( --secondary-color);
-    color:var(--bg-color)
+    background-color:var(--vibrant);
+    color:var(--text-light);
 }
 .md-circle{
     width:1.8rem;
