--- a/css/root.css
+++ b/css/root.css
@@ -9,11 +9,11 @@
 }
 :root{
      --primary-color:#FCB08C;
-    --secondary-color:rgb(213, 234, 236);
-    --bg-color:white;
-    --bg-primary:rgb(250, 241, 241);
-    --bg-secondary-color:#f7f7f7;
+    /* --secondary-color:#f7f7f7; */
+    --vibrant:rgb(128, 0, 128);
+    --bg-secondary: rgb(213, 234, 236);
     --text-color:#000;
+    --text-light:white;
     --secondary-text-color:#495057;
   
 }
