--- a/css/root.css
+++ b/css/root.css
@@ -2,14 +2,15 @@
     padding:0;
     margin:0;
     box-sizing: border-box;
+    word-spacing:.2rem;
     
 }
-@media only screen and(max-width:500px){
-    
+html{
+    scroll-behavior: smooth;
 }
 :root{
      --primary-color:#FCB08C;
-    /* --secondary-color:#f7f7f7; */
+    --secondary-color:#f7f7f7;
     --vibrant:rgb(128, 0, 128);
     --bg-secondary: rgb(213, 234, 236);
     --text-color:#000;
