--- a/style.css
+++ b/style.css
@@ -1,73 +1,34 @@
 @import url("./css/main.css");
-.navbar{
-    min-height: 5vh;
-    background-color: var(--bg-color);
-    display:grid;
-    grid-template-columns: repeat(3,1fr);
-    
+header{
+    grid-area: header;
 }
-
-
-footer{
-    min-height:25vh;
-    color:var(--dark-color);
-    opacity: .8;
+.navbar{
+    background-color: var(--bg-color);
+    height:100px;
+    display:grid;
+    grid-template-columns: repeat(2,1fr);
+}
+.last-col > ul > li{
+    padding:0rem .6rem;
 }
 main{
-    min-height: 80vh;
+    min-height: 55vh;
     display: grid;
-    grid-gap: 200px;
+    grid-gap: 20px;
     grid-template-columns: (2,1fr);
     grid-template-areas: 
     "section1 section1"
     "section1 section1"
-    "installation carbon"
-    "installation carbon";
+    
 }
-.section1{
-    grid-area: section1;
-}
-.left-main-col{
-    grid-area: installation;
-}
-.right-main-col{
-    grid-area: carbon;   
-}
-
-
-
-@media only screen and (max-width: 768px){
-    main{
-        min-height: 60vh;
-        display: grid;
-        grid-gap: 50px;
-        grid-template-columns: (2,1fr);
-        grid-template-areas: 
-        "section1 section1"
-        "section1 section1"
-        "installation installation"
-        "installation installation"
-        "carbon carbon"
-        "carbon carbon";
-    }
-    .section1{
+.main-section{
         grid-area: section1;
-      
-    }
-    .left-main-col{
-        grid-area: installation;
-      }
-    .right-main-col{
-        grid-area: carbon;
-      
-        
-    }
 }
 
-
-
-
-
-
-
-  
+footer{
+    min-height:25vh;
+    color:var(--dark-color);
+    opacity: 0.8;
+}
+    
+    
