--- a/css/root.css
+++ b/css/root.css
@@ -16,5 +16,7 @@ html{
     --text-color:#000;
     --text-light:white;
     --secondary-text-color:#495057;
+    --green:rgb(3, 117, 3);
+    --red:rgb(236, 5, 5);
   
 }
