--- a/css/style/badge.css
+++ b/css/style/badge.css
@@ -8,26 +8,29 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:var(--vibrant);
     color:var(--text-light);
 }
 .md-circle{
     width:1.8rem;
     height:1.8rem;
-    top:6.5rem;
-    left:6.8rem;
+    top:5rem;
+    left:6.3rem;
+    background-color: var(--vibrant);
 }
 .sm-circle{
-    width:1.5rem;
-    height:1.5rem;
-    top:5rem;
+    width:1.3rem;
+    height:1.3rem;
+    top:3.8rem;
     left:5.3rem;
+    background-color: var(--green);
+    
 }
 .xs-circle{
-    top:2.3rem;
-    left:4rem;
+    top:2.5rem;
+    left:3.8rem;
     width:.75rem;
     height:.75rem;
+    background-color: var(--red);
 }
 .icon-top-badge{
     width:1.8rem;
