refactor - a to aside-link

--- a/docsite/components/alert.html
+++ b/docsite/components/alert.html
@@ -29,14 +29,14 @@
     <aside>
         <h1 class="padding-xs text-secondary ">Documentation</h1>
         <ul class="mb-lg padding-xs style-list-none">
-        <li class="mb-lg padding-xs font3 "><a class="decor-none text-vibrant" href="../docs.html">Getting started</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none text-vibrant"  href="avatar.html">Avatar</a> </li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none text-vibrant active" href="alert.html">Alert</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none text-vibrant" href="badge.html">Badge</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none text-vibrant" href="button.html">Button</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none text-vibrant" href="card.html">Card</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none text-vibrant" href="image.html">Image</a></li>
-        <li class="mb-lg padding-xs font3"><a class="decor-none text-vibrant" href="input.html">Input</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="../docs.html">Getting started</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant"  href="avatar.html">Avatar</a> </li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant active" href="alert.html">Alert</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="badge.html">Badge</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="button.html">Button</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="card.html">Card</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="image.html">Image</a></li>
+        <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="input.html">Input</a></li>
     </ul></aside>
     <main>
         <div class="content-wrapper">
