--- a/docsite/components/alert.html
+++ b/docsite/components/alert.html
@@ -88,21 +88,21 @@
          
     </div>
     </main>
-    
-    
     <footer class="centered vertical-direction bg-secondary">
+
         <button class="prev-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-vibrant" href="avatar.html"><i class="fa fa-arrow-left "></i> Avatar </a></button>
         <button class="next-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-vibrant" href="badge.html">Badge <i class="fa fa-arrow-right "></i> </a></button>
-        <h2 class=" mb-lg ">Build with <i class="fa fa-heart text-vibrant"></i> By Kajal Kumari</h2>
-        <ul class="style-list-none mb-lg text-vibrant">
-            <li class="inline-block padding-xs"><a class="text-vibrant" href="#">
+
+        <h2 class=" mb-lg ">Build with <span class="text-primary">&lt;/&gt;</span> by Kajal Kumari</h2>
+        <ul class="style-list-none mb-lg ">
+            <li class="inline-block padding-xs"><a class="light-text" href="#">
                 <i class='fab fa-github fa-lg'></i>
             </a>
                </li>
-            <li class="inline-block padding-xs"><a class="text-vibrant" href="#"><i class='fab fa-linkedin fa-lg'></i></a></li>
-            <li class="inline-block padding-xs"><a class="text-vibrant" href="#"><i class='fab fa-twitter fa-lg'></i></a></li>
+            <li class="inline-block padding-xs"><a class="light-text" href="#"><i class='fab fa-linkedin fa-lg'></i></a></li>
+            <li class="inline-block padding-xs"><a class="light-text" href="#"><i class='fab fa-twitter fa-lg'></i></a></li>
         </ul>
-        <small>© 2022 beadsUI Developers-codz</small>
+        <small>© 2022 beadsUI <a class="decor-none light-text" href="https://github.com/developers-codz">Developers-codz</a> </small>
         
     </footer>
     <script src="docs.js"></script>
