--- a/css/root.css
+++ b/css/root.css
@@ -10,7 +10,7 @@ html{
 }
 :root{
      --primary-color:#FCB08C;
-    --secondary-color:#f7f7f7;
+    --secondary-color:#260827;
     --vibrant:rgb(128, 0, 128);
     --bg-secondary: rgb(213, 234, 236);
     --text-color:#000;
