--- a/docsite/docs.css
+++ b/docsite/docs.css
@@ -69,13 +69,13 @@ footer{
     position:relative;
     grid-area: footer;
     min-height:25vh;
-    color:var(--dark-color);
+    color:var(--text-light);
     z-index: 99;
     /* opacity: 0.8; */
 }
 iframe{
-    width: 550px; 
-    height: 180px; 
+    width: 650px; 
+    height: 200px; 
     border:0; 
     transform: scale(1); 
     overflow-x:hidden;
