feat: added cards

--- a/css/main.css
+++ b/css/main.css
@@ -6,4 +6,5 @@
 @import url("./style/alert.css");
 @import url("./style/badge.css");
 @import url("./style/button.css");
+@import url("./style/card.css");
 @import url("./style/utility.css");
