--- a/css/root.css
+++ b/css/root.css
@@ -12,7 +12,7 @@ html{
      --primary-color:#FCB08C;
     --secondary-color:#260827;
     --vibrant:rgb(128, 0, 128);
-    --bg-secondary: rgb(213, 234, 236);
+    --bg-secondary: #f7f7f7;
     --text-color:#000;
     --text-light:white;
     --secondary-text-color:#495057;
