--- a/css/style/utility.css
+++ b/css/style/utility.css
@@ -1,3 +1,9 @@
+.block{
+    display:block;
+}
+.inline-block{
+    display:inline-block;
+}
 .margin-sm{
     margin:.5rem 1.5rem;
 }
@@ -17,7 +23,7 @@
     margin-right:auto;
 }
 .padding-xs{
-    padding:.5rem 1rem;
+    padding:.2rem 1rem;
 }
 .padding-sm{
     padding:.5rem 1.5rem;
