--- a/docsite/docs.css
+++ b/docsite/docs.css
@@ -26,12 +26,12 @@ header{
 aside{
     max-height:75vh;
     position:sticky;
-    top:0;
+    top:30px;
     color:var(--vibrant);
     grid-area: aside;
     text-align: center;
     /* border-right: 2px solid var(--vibrant); */
-    overflow-y: auto;
+    overflow-y: scroll;
 }
 
 aside > h1{
