--- a/docsite/docs.css
+++ b/docsite/docs.css
@@ -30,14 +30,15 @@ aside{
     color:var(--vibrant);
     grid-area: aside;
     text-align: center;
-    /* border-right: 2px solid var(--vibrant); */
-    overflow-y: scroll;
+    border-right: 2px solid var(--vibrant);
+    overflow-y: auto;
 }
 
 aside > h1{
     position:relative;
     font-weight:bolder;
     font-size: 1.7rem;
+    margin-bottom:20px;
 }
 aside>h1::after{
     position: absolute;
@@ -46,7 +47,7 @@ aside>h1::after{
     right:25px;
     left: 25px;
     width: 80%; 
-    bottom: 5px;
+    bottom: -1px;
     display: inline-block;
     
 }
