--- a/docsite/docs.css
+++ b/docsite/docs.css
@@ -27,9 +27,9 @@ aside{
     max-height:75vh;
     position:sticky;
     top:30px;
-    color:var(--vibrant);
+    /* color:var(--vibrant); */
     grid-area: aside;
-    text-align: center;
+    text-align: left;
     border-right: 2px solid var(--vibrant);
     overflow-y: auto;
 }
@@ -40,17 +40,7 @@ aside > h1{
     font-size: 1.7rem;
     margin-bottom:20px;
 }
-aside>h1::after{
-    position: absolute;
-    content: '';
-    border-bottom: 1px solid;
-    right:25px;
-    left: 25px;
-    width: 80%; 
-    bottom: -1px;
-    display: inline-block;
-    
-}
+
 .aside-link:hover{
    color:var(--primary-color);
    cursor: pointer;
@@ -59,14 +49,13 @@ aside>h1::after{
 .active{
     color:var(--primary-color);
     font-size: 1.4rem;
-    font-weight: bolder;
+    font-weight: bold;
     text-shadow: 1px 0px 1px rgba(0, 0, 7, 0.76);
  
 }
 main{
     grid-area: main;
 }
-
 footer{
     position:relative;
     grid-area: footer;
