--- a/docsite/docs.css
+++ b/docsite/docs.css
@@ -49,7 +49,7 @@ aside > h1{
 .active{
     color:var(--primary-color);
     font-size: 1.4rem;
-    font-weight: bold;
+    font-weight: 500;
     text-shadow: 1px 0px 1px rgba(0, 0, 7, 0.76);
  
 }
