feat: added font section in docs

--- a/docsite/components/button.html
+++ b/docsite/components/button.html
@@ -29,11 +29,9 @@
     <aside>
         <h1 class="padding-xs">Getting Started</h1>
         <ul class="mb-lg padding-xs style-list-none">
-            <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="./docs.html">Installation</a></li>
-            <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="#">Typography</a></li>
-            <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="#">Color</a></li>
+            <li class="padding-xs font3"><a class="decor-none aside-link text-vibrant" href="../docs.html">Installation</a></li>
         </ul>
-        <h1 class="padding-xs text-secondary ">Documentation</h1>
+        <h1 class="padding-xs">Documentation</h1>
         <ul class="mb-lg padding-xs style-list-none">
         <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant"  href="avatar.html">Avatar</a> </li>
         <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="alert.html">Alert</a></li>
