--- a/docsite/components/alert.html
+++ b/docsite/components/alert.html
@@ -28,9 +28,7 @@
     <aside>
         <h1 class="padding-xs">Getting Started</h1>
         <ul class="mb-lg padding-xs style-list-none">
-            <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="./docs.html">Installation</a></li>
-            <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="#">Typography</a></li>
-            <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="#">Color</a></li>
+            <li class="padding-xs font3"><a class="decor-none aside-link text-vibrant" href="../docs.html">Installation</a></li>
         </ul>
         <h1 class="padding-xs ">Documentation</h1>
         
