feat: image input done

--- a/css/main.css
+++ b/css/main.css
@@ -7,4 +7,6 @@
 @import url("./style/badge.css");
 @import url("./style/button.css");
 @import url("./style/card.css");
+@import url("./style/image.css");
+@import url("./style/input.css");
 @import url("./style/utility.css");
