--- a/docsite/components/avatar.html
+++ b/docsite/components/avatar.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>beadsUI || Avatar</title>
+    <title>Avatar || BeadsUI</title>
     <link rel="stylesheet" href="../docs.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
     <header class="shadow-box navbar">
         <div class="first-col">
-            <h1 class="hero-font  margin-md title text-vibrant">Beads
+            <h1 class="hero-font  margin-md title text-vibrant shadow-text">Beads
                  <span class="text-primary margin-none">UI</span></h1>
         </div>
     
@@ -102,6 +102,39 @@
                 </div>
             
             </div>
+            <div class="section">
+                <h2 class="mb-lg">Text Avatar</h2>
+                <div class="centered shadow-box margin-md padding-y">
+                <div class="avatar padding-sm">
+                    <div class="border-round text-border1 lg-text centered bg-secondary" >
+                        <div class="font2 light-text">ABC</div>
+                    </div>
+                </div>
+                <div class="avatar padding-sm">
+                    <div class="border-round text-border2 md-text centered" >
+                        <div class="font3">ABC</div>
+                    </div>
+                </div>
+                <div class="avatar padding-sm">
+                    <div class="border-round text-border1 sm-text centered bg-secondary" >
+                        <div class="font3 light-text">ABC</div>
+                    </div>
+                </div>
+                <div class="avatar padding-sm">
+                    <div class="border-round text-border2 xs-text centered" >
+                        <div class="">ABC</div>
+                    </div>
+                </div>
+            </div>
+                <div class="iframe-wrapper">
+                    <iframe
+                    src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253C%21--For%2520small%2520and%2520extra%2520small%2520text%2520avatar%2520change%2520the%2520class%2520to%2520sm-text%2520and%2520xs-text--%253E%2520%250A%253Cdiv%2520class%253D%2522avatar%2520padding-sm%2522%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522border-round%2520text-border1%2520lg-text%2520centered%2520bg-secondary%2522%2520%253E%250A%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522font2%2520light-text%2522%253EABC%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522avatar%2520padding-sm%2522%253E%250A%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522border-round%2520text-border2%2520md-text%2520centered%2522%2520%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522font3%2522%253EABC%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253C%252Fdiv%253E"
+                    sandbox="allow-scripts allow-same-origin">
+                  </iframe>
+                </div>
+            
+            </div>
+            
          
         </div>
     </main>
