--- a/docsite/components/button.html
+++ b/docsite/components/button.html
@@ -11,7 +11,7 @@
 <body>
     <header class="shadow-box navbar">
         <div class="first-col">
-            <h1 class="hero-font  margin-md title text-vibrant">Beads
+            <h1 class="hero-font  margin-md title text-vibrant shadow-text">Beads
                  <span class="text-primary margin-none">UI</span></h1>
         </div>
     
