feat:text list & nav done

--- a/css/main.css
+++ b/css/main.css
@@ -9,4 +9,5 @@
 @import url("./style/card.css");
 @import url("./style/image.css");
 @import url("./style/input.css");
+@import url("./style/navigation.css");
 @import url("./style/utility.css");
