--- a/css/typography.css
+++ b/css/typography.css
@@ -8,9 +8,17 @@
     font-size: 2.5rem;
 }
 .font2{
-    font-size:1.5rem;
-    font-weight: 500;
+    font-size:1.7rem;
 }
 .font3{
-    font-size: 1.2rem;
+    font-size: 1.25rem;
+}
+.font4{
+    font-size:1rem;
+}
+.font5{
+    font-size:.90rem;
+}
+.font6{
+    font-size:.75rem;
 }
