--- a/docsite/components/input.html
+++ b/docsite/components/input.html
@@ -40,16 +40,23 @@
         <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="card.html">Card</a></li>
         <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="image.html">Image</a></li>
         <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant active" href="input.html">Input</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="textutil.html">Text Utils</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="list.html">List</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="navigation.html">Navigation</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="modal.html">Modal</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="rating.html">Rating</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="toast.html">Toast</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="grid.html">Grid</a></li>
     </ul></aside>
     <main>
         <div class="content-wrapper">
            <div class="section">
                <h2 class="mb-lg">Input</h2>
-               <p class="mb-lg font3 text-secondary">Input are used to fill form by users or to take feedback from users also to take user information we uses inputs  
+               <p class="mb-lg font3 text-secondary">Input are used to fill form by users or to take feedback from users also to take user information we uses inputs. 
            <div class="section">
             <h2 class="mb-lg">TextBox</h2>
             <div class="centered shadow-box margin-md padding-y">
-           <textarea name="" id="" cols="30" rows="8"></textarea>
+           <textarea class="input font3" name="" id="" cols="30" rows="5"></textarea>
             </div>
 
             <div class="iframe-wrapper">
