--- a/css/style/utility.css
+++ b/css/style/utility.css
@@ -1,4 +1,4 @@
-.block{
+block{
     display:block;
 }
 .inline-block{
@@ -62,6 +62,12 @@
 .text-vibrant{
     color: var(--vibrant);
 }
+.text-danger{
+    color:var(--red)
+}
+.text-success{
+    color:var(--green)
+}
 .bg-red{
     background-color:var(--red);
 }
@@ -107,4 +113,16 @@
 }
 .border-bottom{
     border-bottom: 2px solid var(--primary-color);
+}
+.center-text{
+    text-align: center;
+}
+.left-align{
+    text-align: left;
+}
+.right-text{
+    text-align: right;
+}
+.link:hover{
+    color:var(--primary-color)
 }
