--- a/docsite/components/avatar.html
+++ b/docsite/components/avatar.html
@@ -41,6 +41,13 @@
         <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="card.html">Card</a></li>
         <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="image.html">Image</a></li>
         <li class="mb-lg padding-xs font3"><a class="decor-none aside-link text-vibrant" href="input.html">Input</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="textutil.html">Text Utils</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="list.html">List</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="navigation.html">Navigation</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="modal.html">Modal</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="rating.html">Rating</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="toast.html">Toast</a></li>
+        <li class="mb-lg padding-xs font3 "><a class="decor-none aside-link text-vibrant" href="grid.html">Grid</a></li>
     </ul></aside>
     <main>
         <div class="content-wrapper">
