--- a/docsite/docs.css
+++ b/docsite/docs.css
@@ -24,13 +24,16 @@ header{
     padding:0rem .6rem;
 }
 aside{
-    max-height:75vh;
+    max-height:80vh;
     position:sticky;
     top:30px;
     grid-area: aside;
     text-align: left;
     border-right: 2px solid var(--vibrant);
     overflow-y:auto;
+}
+aside::-webkit-scrollbar {
+    background-color: transparent;
 }
 aside > h1{
     position:relative;
