--- a/css/style/navigation.css
+++ b/css/style/navigation.css
@@ -13,7 +13,7 @@
     margin:0rem 1rem;
 }
 .dropbtn{
-    background-color: var();
+    background-color: var(--bg-secondary);
     padding:.5rem 1rem;
 }
 .dropdown:hover .dropdown-content {
