refactor: aligned text

--- a/docsite/components/textutil.html
+++ b/docsite/components/textutil.html
@@ -94,9 +94,9 @@
         <div class="section">
             <h2 class="mb-lg">Aligned Text</h2>
             <div class="block shadow-box margin-md padding-y">
-                    <p class="font2 text-primary margin-sm left-text">primary Text</p>
-                    <p class="font2 text-secondary margin-sm center-text">secondary Text</p>
-                    <p class="font2 text-vibrant margin-sm right-text">vibrant Text</p>
+                    <p class="font2 text-primary margin-sm left-text">Left Aligned Text</p>
+                    <p class="font2 text-secondary margin-sm center-text">Centered Text</p>
+                    <p class="font2 text-vibrant margin-sm right-text">Right Aligned Text</p>
             </div>
             <div class="iframe-wrapper">
                 <iframe
