Modal Rating Toast Grid done

--- a/css/main.css
+++ b/css/main.css
@@ -10,4 +10,7 @@
 @import url("./style/image.css");
 @import url("./style/input.css");
 @import url("./style/navigation.css");
+@import url("./style/modal.css");
+@import url("./style/toast.css");
+@import url("./style/grid.css");
 @import url("./style/utility.css");
