--- a/css/style/button.css
+++ b/css/style/button.css
@@ -7,17 +7,18 @@
 .btn-outline{
     border:1px solid var(--primary-color);
     background: transparent;
-    color:var(--primary-color)
+    color:var(--primary-color);
+}
+.btn-outline:hover{
+    background: var(--primary-color);
+    color:var(--text-color);
+    font-weight: 700;
 }
 .rm-border{
     border:none;
 }
 .hover-primary:hover{
     color:var(--primary-color);
-}
-.hover-secondary:hover{
-    background: var(--primary-color);
-    color:var(--text-light)
 }
 .btn-transparent{
     background: none;
