refactor:Z-index & small fixes

--- a/docsite/components/toast.html
+++ b/docsite/components/toast.html
@@ -90,16 +90,7 @@
         <small>© 2022 beadsUI <a class="decor-none light-text" href="https://github.com/developers-codz">Developers-codz</a> </small>
         
     </footer>
-    <script>
-        var toastBtn = document.querySelector("#toast-btn")
-        var toast = document.querySelector("#toast")
-        toastBtn.addEventListener("click",()=>{
-            toast.classList.add("show")
-            setTimeout(()=>{
-                toast.classList.remove("show")
-            },3000)
-        })
-    </script>
+    <script src="toast.js"></script>
     <script src="./input.js"></script>
     <script src="../../css/component.js"></script>
     <script src="modal.js"></script>
