--- a/docsite/docs.css
+++ b/docsite/docs.css
@@ -62,19 +62,19 @@ footer{
     grid-area: footer;
     min-height:25vh;
     color:var(--text-light);
-    z-index: 99;
+    z-index: 2;
 }
 iframe{
-    width: 700px; 
-    height: 200px; 
+    width: 43.75rem; 
+    height: 12.5rem; 
     border:0; 
     transform: scale(1); 
     overflow-x:hidden;
     margin-top:5rem;
 }
 .iframe-lg{
-    width: 957px;
-    height: 530px;
+    width: 59.81rem;
+    height: 33.125rem;
 }
 .section{
     margin:0 0 3rem 0;
@@ -117,7 +117,7 @@ iframe{
         display:none
     }
     iframe , .iframe-lg{
-        width:300px;
+        width:18.75rem;
     }
     .prev-page-btn{
         left:0;
